@@ -223,6 +223,14 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<!-- config surefire -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+				</configuration>
+			</plugin>
 			<!-- get version and name in application properties -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
